# langproxy-rs

./: .gitignore  Cargo.toml  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
bruno/: ECHO_BYTES.bru  GET_ACCOUNT_by_id.bru  GET_ROOT.bru  azure-openai-completions-stream=true.bru  azure-openai-completions.bru  bruno.json
bruno/environments/: LOCAL.bru  workers.dev.bru
src/: analytics.rs  lib.rs
