# Copyright (c) 2025 EveryMundo
# All rights reserved.

[package]
name = "cf-worker-axum-101"
version = "0.1.0"
edition = "2021"
authors = [ "Daniel Santana <github@danielsantana.net>" ]
description = "CloudFlare worker in rust"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.8.4", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.219", features = ["derive"] }
hashbrown = "0.15.4"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
heapless = { version = "0.8.0", features = ["serde"] }
http = "1.3.1"
http-body = "1.0.1"
wasm-bindgen-futures = "0.4.50"
reqwest = { version = "0.12.20", features = ["stream", "gzip"] }
use = "0.0.1-pre.0"
futures-util = "0.3.31"
futures-channel = "0.3.31"
bytes = "1.10.1"
